# parquet-rs

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml  build.rs  rustfmt.toml
0.3.0/: search-index.js
0.3.0/implementors/rand/: trait.Rand.js
0.3.0/parquet/: all.html
0.3.0/parquet/basic/: enum.ColumnOrder.html  enum.LogicalType.html  enum.PageType.html  enum.Repetition.html  enum.Type.html  index.html
0.3.0/parquet/column/: sidebar-items.js
0.3.0/parquet/compression/: BrotliCodec.t.html  fn.create_codec.html  struct.BrotliCodec.html  (+4 more)
0.3.0/parquet_read/: all.html  index.html
0.4.0/: aliases.js  search-index.js
0.4.0/parquet/: all.html  sidebar-items.js
0.4.0/parquet_read/: index.html
0.4.1/: aliases.js  search-index.js
0.4.2/: search-index.js
apache-donation/: index.html  search-index.js
apache-donation/parquet_schema/: all.html  index.html
benches/: codec.rs  common.rs  decoding.rs  encoding.rs  int_decoding.rs  int_encoding.rs  reader.rs
ci/: deploy-docs.sh
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/src/: main.rs
master/: aliases.js  dark.css  light.css  rustdoc.css  search-index.js  source-files.js
master/parquet/: all.html  index.html  sidebar-items.js
master/parquet_read/: all.html  index.html
master/parquet_schema/: all.html  index.html
src/: basic.rs  compression.rs  data_type.rs  encoding.rs  errors.rs  lib.rs  rle_encoding.rs  types.rs
src/column/: mod.rs  page.rs  reader.rs  writer.rs
src/encodings/: decoding.rs  encoding.rs  levels.rs  mod.rs  rle.rs  rle_encoding.rs
src/file/: metadata.rs  mod.rs  properties.rs  reader.rs  statistics.rs  writer.rs
src/parquet_thrift/: mod.rs  parquet.rs  parquet.thrift
src/record/: api.rs  mod.rs  reader.rs  triplet.rs
src/schema/: mod.rs  parser.rs  printer.rs  types.rs
src/util/: bit_packing.rs  bit_util.rs  hash_util.rs  io.rs  memory.rs  mod.rs  test_common.rs
(+733 files in other folders)
