[package]
name = "parquet"
version = "0.1.0"
license = "Apache-2.0"
description = "Apache Parquet implementation in Rust"
authors = ["Chao Sun <sunchao@apache.org>"]
homepage = "https://github.com/sunchao/parquet-rs"
repository = "https://github.com/sunchao/parquet-rs"
keywords = ["parquet", "hadoop"]

[dependencies]
quick-error = "1.2.1"
byteorder = "1"
ordered-float = "0.5.0"
try_from = "0.2.2"
snap = "0.2"
brotli = "1.1.2"
flate2 = "0.2"
rand = "0.4"
thrift = "0.0.4"
x86intrin = "0.4.3"
