[package]
name = "parquet"
version = "0.2.0"
license = "Apache-2.0"
description = "Apache Parquet implementation in Rust"
authors = [
    "Chao Sun <sunchao@apache.org>",
    "Ivan Sadikov <ivan.sadikov@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/sunchao/parquet-rs"
repository = "https://github.com/sunchao/parquet-rs"
keywords = ["parquet", "hadoop"]

[dependencies]
parquet-format = "2.4.0"
quick-error = "1.2.1"
byteorder = "1"
snap = "0.2"
brotli = "1.1.2"
flate2 = "0.2"
thrift = "0.0.4"
x86intrin = "0.4.3"
chrono = "0.4"
lz4 = "1.22"
num-bigint = "0.1"

[dev-dependencies]
lazy_static = "1"
rand = "0.4"
