[package]
name = "parquet"
version = "0.3.0"
license = "Apache-2.0"
description = "Apache Parquet implementation in Rust"
authors = [
    "Chao Sun <sunchao@apache.org>",
    "Ivan Sadikov <ivan.sadikov@gmail.com>"
]
readme = "README.md"
build = "build.rs"
homepage = "https://github.com/sunchao/parquet-rs"
repository = "https://github.com/sunchao/parquet-rs"
keywords = ["parquet", "hadoop"]

[dependencies]
parquet-format = "2.4.0"
quick-error = "1.2.2"
byteorder = "1"
thrift = "0.0.4"
snap = "0.2"
brotli = "2.2.1"
flate2 = "1.0.1"
lz4 = "1.22"
zstd = "0.4"
chrono = "0.4"
num-bigint = "0.2"

[dev-dependencies]
lazy_static = "1"
rand = "0.4"
